# ICOstate

./: .gitignore  .readthedocs.yaml  Makefile  ReadMe.md  justfile  pyproject.toml  settings.yaml
.github/workflows/: checks.yaml  publish.yaml
doc/: conf.py  index.rst
doc/release/: 0.10.md  0.11.md  0.12.md  0.13.md  0.14.md  0.15.md  0.16.md  0.17.md  0.18.md  0.19.md  0.20.md  0.21.md  0.22.md  0.23.md  0.24.md  0.25.md  0.4.md  0.5.md  0.6.md  0.7.md  0.8.md  0.9.md
doc/sphinx/: api.rst  conf.py  development.md  index.rst  requirements.txt  state.md  usage.rst
icostate/: __init__.py  api.py  measurement.py  sensor.py  state.py  system.py  test.py
test/: conftest.py  test_system.py
