[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "René Schwaiger", email = "rene.schwaiger@ift.at"},
]

dependencies = [
  "icotronic>=3,<4",
]
description = """Stateful API for the ICOtronic system intended for usage in
              a Web API"""
keywords = [
    "smart-tool",
    "smh",
    "stu",
    "sth",
    "tool-holder",
]
name = "icostate"
readme = "ReadMe.md"
requires-python = ">=3.10,<4"
version = "0.1"

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "Flake8-pyproject>=1.2.3"
]

[tool.flake8]
ignore = [
  # Whitespace before colon
  "E203",
  # Module level import not at top of file
  "E402",
  # Line break before binary operator
  "W503",
  # Line break after binary operator
  "W504"
]
